# graphrag

./: .gitignore  QUICKSTART.md  README.md  docker-compose.yml  entity_types.txt  pyproject.toml  setup.py  test_installation.py
examples/: basic_usage.py
src/graphrag/: __init__.py  cli.py  config.py  core.py  indexer.py  models.py  query.py
src/graphrag/services/: __init__.py  entity_detection.py  file_watcher.py  knowledge_graph.py  query.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core.py  test_entity_detection.py  test_file_watcher.py  test_knowledge_graph.py  test_models.py  test_query.py  test_utils.py
